--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,16 @@ exclude = .git,.github,__pycache__,.pytest_cache,venv,*_test.py
 max-complexity = 10
 max-line-length = 127
 
+[pylint.MAIN]
+ignore-paths = ^.*_test.py$
+disable = C0103,C0114,C0116
+check-quote-consistency = y
+score = n
+
+[pylint.FORMAT]
+max-line-length = 127
+
 [tool:pytest]
 addopts = --strict-markers
 markers =
-    task: mark test.
+    task: A concept exercise task.
