--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: CI
 
-on: [ push ]
+on: [push, workflow_dispatch]
 
 jobs:
   Build:
@@ -18,6 +18,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Test
-        run: .github/run.sh --no-lint
+        run: ./.github/run.sh --no-lint
       - name: Lint
-        run: .github/run.sh --no-test
+        run: ./.github/run.sh --no-test
