--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set up
         uses: actions/setup-python@v5
+        with:
+          python-version-file: 'pyproject.toml'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
