--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,15 +8,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v5
+      - name: Set up Python
+        uses: actions/setup-python@v6
         with:
           python-version-file: 'pyproject.toml'
-      - name: Install dependencies
+      - name: Set up venv
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          python3 -m venv "$PWD/venv"
+          echo "$PWD/venv/bin" >> "$GITHUB_PATH"
+      - name: Install dependencies
+        run: python -m pip install --upgrade pip '.[test]' '.[lint]'
       - name: Test
         run: ./.github/run.sh --no-lint
       - name: Lint
